--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^13.6.0",
+    "@discordjs/builders": "^1.4.0",
+    "discord.js": "^14.7.1",
     "dotenv": "^16.0.0",
     "mongoose": "^6.2.8",
     "wokcommands": "^1.5.3"
